# local_language_model

./: Cargo.toml
message_history/: "Help_with_Shoe_Tying:_How_to_Tie_Your_Shoes_Properly".json  Greetings!_How_can_I_assist_you_today?.json  Hello!_How_can_I_help_you_today?.json  Hey_there!_How_can_I_assist_you_today?.json  Starting_a_Conversation.json  Sure,_here's_a_fun_fact:_Did_you_know_that_the_shortest_war_in_history_lasted_only_13_minutes?.json  Test_Session.json
src/: main.rs
src/agents/: agent.rs  agent_manager.rs  chat_agent.rs  conversationalist.rs  labeler.rs  mod.rs  orchestrator.rs  planner.rs
src/prompts/: conversationalist.txt  labeler.txt  shared.txt  system.txt
src/workers/: archivist.rs  drafter.rs  file_reader.rs  mod.rs  state_manager.rs  traits.rs
