[package]
name = "local_language_model"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
dotenvy = "0.15"
envy = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
